<resources>
    <string name="app_name">Incident Reporting System</string>
    <string name="version">Version 1.1 Copy Rights Reserved</string>
    <string name="create_account">Don\'t have an account?</string>
    <string name="register">Register!</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="register_only">Register</string>
    <string name="already_have_an_account">Already have an Account?</string>
    <string name="loading">Loading,Please Wait...</string>
    <string name="height">Height (cms)</string>
    <string name="weight">Weight (lbs)</string>

    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="about">About</string>
    <string name="update_password">Update Password</string>
    <string name="update">Update</string>
    <string name="dashboard">Dashboard</string>
    <string name="enter_reset_code">Enter Reset Code</string>
    <string name="your_passwords">Your Passwords</string>
    <string name="password_title">Password Title</string>
    <string name="password_code">Password Code</string>
    <string name="submit">Submit</string>
    <string name="create">Create</string>
    <string name="dashes">________________________</string>
    <string name="maps">Maps</string>
    <string name="save">Save</string>
    <string name="close">Close</string>
</resources>